test/language/errors/errors_not.hm
# @exception expected '!='

set x = !false
echo x
